post deploy fixed

--- a/app.json
+++ b/app.json
@@ -4,12 +4,12 @@
   "repository": "https://github.com/tomohiro-mitani/plug",
   "addons": ["heroku-postgresql:standard-0"],
   "environments": {
+    "scripts": {
+      "postdeploy": "bundle exec rake add_permissions:update_all"
+    },
     "review": {
       "env": {
         "CLOUDINARY_URL": "cloudinary://589383342231883:GUKlibWATIwY2A6fvxtmChvjIdY@dqck6qkjd"
-      },
-      "scripts": {
-        "postdeploy": "bundle rake add_permissions:update_all"
       },
       "addons": [
         "heroku-postgresql:hobby-dev",
