--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
-meta_product_name: "Plug"
-meta_title: "Plug - Spotify Plugin"
+meta_product_name: "Sharefesta"
+meta_title: "Sharefesta - Spotify Plugin"
 meta_description: "The location based music curation app. We let you check-in music events, and discover new music for you!"
 meta_image: "plug_logo.png" # should exist in `app/assets/images/`
 meta_fb_image: "plug_logo_fb.png" # should exist in `app/assets/images/`
